update footer color and fix css responsive issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: #d88a83;
+  color: #5dcad1;
   font-family: 'Bebas Neue', cursive;
 }
 
