--- a/src/components/details/Hero.css
+++ b/src/components/details/Hero.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   text-align: center;
   width: 100%;
-  height: 85vh;
   overflow: hidden;
 }
 
@@ -69,7 +68,7 @@
   bottom: 275px;
   left: 500px;
   margin: 10px;
-  min-height: 275px;
+  max-height: 300px;
 }
 
 @media screen and (max-width: 550px) {
@@ -85,17 +84,24 @@
     left: 0px;
     margin-bottom: 100px;
     min-height: 200px;
+    margin-right: 10px;
   }
 }
 
 @media screen and (max-width: 375px) {
   .masthead {
-    height: 100vh;
     margin: 0;
-    width: 80%;
+    width: 100%;
   }
 
   .masthead button {
     width: 200px;
+  }
+
+  .hero-svg {
+    display: block;
+    margin-bottom: 50px;
+    justify-content: center;
+    align-items: center;
   }
 }
