--- a/src/components/details/ProjectCard.css
+++ b/src/components/details/ProjectCard.css
@@ -1,5 +1,5 @@
 .project-card {
-  width: 100%;
+  width: 50%;
   padding: 10px;
   margin-bottom: 10px;
   color: #1c2143;
