--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -8,11 +8,12 @@ footer {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: white;
+  background-color: #5dcad1;
 }
 
 footer p {
   margin-bottom: 0;
+  margin-top: 0;
   padding-bottom: 10px;
 }
 
