--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -29,6 +29,7 @@
   margin-top: 100px;
   list-style: none;
   padding: 0;
+  max-width: 75%;
 }
 
 .about ul h3 {
@@ -56,6 +57,7 @@
     float: none;
     display: block;
     margin: 0 auto;
+    padding: 0;
   }
 }
 
